[package]
name = "kae"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.98"
chrono = "0.4.40"
clap = { version = "4.5.37", features = ["derive"] }
crossterm = "0.29.0"
ratatui = "0.29.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "json"] }
uuid = { version = "1.16.0", features = ["v4", "serde"] }
